--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "dev": "node ./src/app.js",
     "start": "node ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.6.1"
   }
 }
